<resources>

    <!--  frame_17 strings  -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="__400_75_string">$400.75</string>
    <string name="lifetime_earning_string">Lifetime earning</string>
    <string name="__150_75_string">$150.75</string>
    <string name="pramod_string">Pramod</string>
    <string name="current_earnings_string">current earnings</string>
    <string name="settings_string">Settings</string>
    <string name="favorites_string">Favorites</string>
    <string name="your_earnings_string">Your earnings</string>
    <string name="payments_string">Payments</string>
    <string name="withdraw_earnings_string">withdraw earnings</string>

    <!-- profile strings -->
    <string name="splash_message">Welcome to My App</string>
    <string name="profile_name">John Doe</string>
    <string name="profile_email">john.doe@example.com</string>
    <string name="profile_phone">(123) 456-7890</string>
    <string name="profile_location">San Francisco, CA</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; Feedback</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notifications</string>
    <string name="action_cart">Cart</string>


    <string name="app_name">oncash</string>
    <string name="information">Information</string>
    <string name="tata_neu">Tata Neu</string>
    <string name="steps_to_ea">Steps To Earn Reward</string>
    <string name="wallet_bala">Wallet Balance</string>
    <string name="balance">Balance</string>
    <string name="withdrawal_">Withdrawal Limit ₹10</string>
    <string name="transaction">Transaction history</string>
    <string name="rectangle_withdraw_TextView">Withdraw</string>
    <string name="withdrawal_limit">Withdrawal Limit ₹20</string>
    <string name="number_text">Number</string>
    <string name="amount_text">Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="enter_mobil">Phone No</string>
    <string name="some_id"> $1,200.67</string>
    <string name="continue_">Sign up</string>
    <string name="login">Login</string>
    <string name="visa_card">Offer </string>
    <string name="please_logi">Please login to continue</string>
    <string name="get_started">Sign in</string>
    <string name="weekly">Weekly Paid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ellipse_10">ellipse_10</string>
    <string name="pay_2">pay_2</string>
    <string name="Number_s">Number for Secure Transaction</string>
    <string name="withdrawal_history">Withdrawal History</string>
    <string name="monthly_paid">Monthly Paid</string>
    <string name="description">
Description
</string>
    <string name="steps">Steps</string>
    <!-- Onboarding screen -->
    <string name="title_on_boarding_first_slide">Welcome to Oncash!</string>
    <string name="description_on_boarding_first_slide"> It allows you to earn money by doing simple tasks, such as installing apps, registering for websites, and shopping online. With Oncash, you can earn money while you\'re browsing the web, shopping online, or just doing your everyday activities.</string>
    <string name="title_on_boarding_second_slide">How it works</string>
    <string name="description_on_boarding_second_slide">To earn money with Oncash, simply complete tasks. When you complete a task, you will earn a certain amount of money. You can then redeem your earnings for cash or gift cards.</string>
    <string name="title_on_boarding_third_slide">Get started</string>
    <string name="description_on_boarding_third_slide">Sign up for Oncash today and start earning money! It\'s easy to get started. Then, you can start completing tasks and earning money.</string>
    <string name="title_button_get_started">Sign Up</string>
    <string name="number_for_secure_transactions">Number for Secure Transactions.</string>


    <!-- Names-->
    <string name="contact">Contact</string>
    <string name="Leader">Leaderboard</string>
    <string name="Referal">Refer And Earn</string>
    <string name="Offer_history">Offer History</string>
    <string name="get">Complete all offers to earn ₹500</string>
</resources>