<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_wallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_wallet_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/withdrawButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#2479E9"
            android:elevation="14dp"
            android:text="@string/withdraw"
            android:textColor="#ffff"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:fontFamily="@font/poppinsemibold"
            android:gravity="center"
            app:cornerRadius="46dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />

        <View
            android:id="@+id/rectangle_7"
            android:layout_width="109dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_wallet_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wallet_bala_text" />

        <TextView
            android:id="@+id/wallet_bala"
            android:layout_width="99dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"

            android:textAppearance="@style/wallet_bala"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="@+id/rectangle_7"
            app:layout_constraintTop_toTopOf="@+id/rectangle_7"
            app:layout_constraintVertical_bias="0.769" />

        <TextView
            android:id="@+id/wallet_bala_text"
            android:layout_width="138dp"
            android:layout_height="35dp"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="top"
            android:text="@string/wallet_bala"
            android:textAppearance="@style/wallet_bala"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/backButWallet"
                android:layout_width="31dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:elevation="14dp"
                android:src="@drawable/backbut"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.06" />


        <androidx.cardview.widget.CardView
            android:id="@+id/rectangle_8"
            android:layout_width="413dp"
            android:layout_height="580dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdrawButton">

            <TextView
                android:layout_width="234dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsemibold"
                android:gravity="center"
                android:text="@string/withdrawal_history"
                android:textSize="14sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/withdrawalTransaction"
                android:layout_width="363dp"
                android:layout_height="428dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="20dp"
                android:visibility="visible" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

