<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".View.Info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/backButton_Info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/go_back" />

            <ImageView
                android:id="@+id/offerImage_info"
                android:layout_width="127dp"
                android:layout_height="111dp"
                android:layout_marginStart="80dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </LinearLayout>

        <!-- Offer Details Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- First CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/item"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/offername_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visa_card"
                        android:textAppearance="@style/visa_card" />

                    <TextView
                        android:id="@+id/offer_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Offer Ends in 3 Days"
                        android:textAppearance="@style/offer_price" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Second CardView -->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#2479E9"
                app:cardCornerRadius="50dp">

                <TextView
                    android:id="@+id/offer_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/some_id"
                    android:textAppearance="@style/offer_price"
                    android:textColor="#FFFFFF" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/noto"
            android:gravity="center"
            android:padding="10dp"
            android:text="Description"
            android:textAppearance="@style/description" />

        <RelativeLayout
            android:id="@+id/frame_10000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/frame_10000"
            android:clipToOutline="true">

            <!-- Steps Section -->
            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textAppearance="@style/steps"
                android:layout_margin="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructionList_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/steps"
                android:padding="10dp" />

            <!-- Documents Section -->
            <TextView
                android:id="@+id/documents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Documents"
                android:textAppearance="@style/steps"
                android:layout_margin="10dp"
                android:layout_below="@+id/instructionList_info"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/documentsList_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/documents"
                android:padding="10dp" />

            <!-- Offer Queries Section -->
            <TextView
                android:id="@+id/offerQueries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Offer Queries"
                android:textAppearance="@style/steps"
                android:layout_margin="10dp"
                android:layout_below="@+id/documentsList_info"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/offerQueriesList_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/offerQueries"
                android:padding="10dp" />
        </RelativeLayout>


        <!-- Link Button Section -->
        <Button
            android:id="@+id/offerLinkButtonInfo"
            android:layout_width="311dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:backgroundTint="#2479E9"
            android:fontFamily="@font/noto"
            android:text="Let's go"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="8dp" />
    </LinearLayout>
</ScrollView>